@@ -43,6 +43,35 @@ public final class Unsafes {
     static {
         Class<?> unsafeClass;
         try {
+            /**
+             * Disable Access Warnings:
+             * 
+             * <pre>
+             * {@code
+             * WARNING: An illegal reflective access operation has occurred
+             * WARNING: Illegal reflective access by org.talend.sdk.component.runtime.manager.asm.Unsafes \
+             * (file:/xxxx/component-runtime-manager-x.xx.x.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int)
+             * WARNING: Please consider reporting this to the maintainers of org.talend.sdk.component.runtime.manager.asm.Unsafes
+             * WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+             * WARNING: All illegal access operations will be denied in a future release
+            }
+             * </pre>
+             */
+            Class unsafeClazz = Class.forName("sun.misc.Unsafe");
+            Field field = unsafeClazz.getDeclaredField("theUnsafe");
+            field.setAccessible(true);
+            Object unsafe = field.get(null);
+            Method putObjectVolatile =
+                    unsafeClazz.getDeclaredMethod("putObjectVolatile", Object.class, long.class, Object.class);
+            Method staticFieldOffset = unsafeClazz.getDeclaredMethod("staticFieldOffset", Field.class);
+            Class loggerClass = Class.forName("jdk.internal.module.IllegalAccessLogger");
+            Field loggerField = loggerClass.getDeclaredField("logger");
+            Long offset = (Long) staticFieldOffset.invoke(unsafe, loggerField);
+            putObjectVolatile.invoke(unsafe, loggerClass, offset, null);
+        } catch (Exception e) {
+            System.err.println("Disabling unsafe warnings failed: " + e.getMessage());
+        }
+        try {
             unsafeClass = AccessController
                     .doPrivileged((PrivilegedAction<Class<?>>) () -> Stream
                             .of(Thread.currentThread().getContextClassLoader(), ClassLoader.getSystemClassLoader())
@@ -143,6 +172,7 @@ public final class Unsafes {
      * @param proxyName the class name to define.
      * @param proxyBytes the bytes of the class to define.
      * @param <T> the Class type
+     *
      * @return the Class which got loaded in the classloader
      */
     public static <T> Class<T> defineAndLoadClass(final ClassLoader classLoader, final String proxyName,
